# zheng_pvz_like_game

./: .gitignore  CMakeLists.txt  CMakePresets.json  conanfile.txt  defualt_project.cmake  find_pkg.cmake  main.cpp
cmake/: include_modules.cmake  try_compile_flags.cmake
src/client/: CMakeLists.txt
src/server/: CMakeLists.txt
src/server/win32/: WinMain.cpp
